fixing timer alignment

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -5,3 +5,8 @@
 canvas {
   cursor: text;
 }*/
+.timer {
+	text-align: center;
+	font-weight: bold;
+	font-size: 150%;
+}
